--- a/traceability-app/src/index.html
+++ b/traceability-app/src/index.html
@@ -5,7 +5,8 @@
   <title>TraceabilityApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
+  <link rel="icon" type="image/x-icon" href="assets/images/fav/14780_7af9.png">
  <!-- <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">-->
 </head>
 <body>
